--- a/SistTestMillon/SistTestMillon/Views/Home/Index.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Home/Index.cshtml
@@ -70,68 +70,6 @@
         </div>
     </div><!-- // .col-md-3 -->
 </div><!-- // .row -->
-<div class="row">
-    <div class="col-xl-8">
-        <div class="c-card u-p-medium u-mb-medium">
-            <div class="u-flex u-justify-between u-align-items-center">
-                <h3 class="c-card__title">Revenue</h3>
-                <span class="u-text-small u-text-uppercase u-text-mute">January 2017</span>
-            </div>
-
-            <canvas id="js-chart-revenue" width="300" height="178"></canvas>
-        </div>
-    </div>
-    <div class="col-xl-4">
-        <!-- Cards below rely on utilities (u-) as they are highly customizable -->
-        <div class="c-card u-p-medium u-mb-small">
-            <h4 class="u-h5">Active Clients</h4>
-            <p class="u-text-small u-text-mute u-mb-small">You’re currently in <strong class="u-text-bold">TOP 10%</strong> of Workspace platform your rating is <strong class="u-text-bold">4.85</strong>. Keep up great work! </p>
-            <div class="o-line u-mb-small">
-                <p class="u-text-small u-mr-small">Rating</p>
-                <div class="c-progress c-progress--success c-progress--small u-mb-zero">
-                    <div class="c-progress__bar" style="width:72%;"></div>
-                </div>
-                <div class="u-text-small u-text-mute u-ml-small">72%</div>
-            </div>
-            <div class="o-line u-mb-small">
-                <p class="u-text-small u-mr-small">Budget</p>
-                <div class="c-progress c-progress--fancy c-progress--small u-mb-zero">
-                    <div class="c-progress__bar" style="width:42.6%;"></div>
-                </div>
-                <div class="u-text-small u-text-mute u-ml-small">42.6%</div>
-            </div>
-            <div class="o-line">
-                <p class="u-text-small u-mr-small">Timing</p>
-                <div class="c-progress c-progress--info c-progress--small u-mb-zero">
-                    <div class="c-progress__bar" style="width:89.2%;"></div>
-                </div>
-                <div class="u-text-small u-text-mute u-ml-small">89.2%</div>
-            </div>
-        </div>
-        <div class="c-card u-p-medium u-mb-small">
-            <h4 class="u-h5">Tasks</h4>
-            <div class="o-line u-mb-xsmall">
-                <p class="u-text-small">Completed</p>
-                <span class="u-text-small u-text-mute">340</span>
-            </div>
-            <div class="o-line u-mb-xsmall">
-                <p class="u-text-small">Total</p>
-                <span class="u-text-small u-text-mute">520</span>
-            </div>
-            <div class="o-line u-mb-xsmall">
-                <p class="u-text-small">Monthly Average</p>
-                <span class="u-text-small u-text-mute">2454</span>
-            </div>
-            <div class="c-divider u-mt-xsmall u-mb-xsmall"></div>
-            <div class="o-line">
-                <p class="u-text-small u-mr-small">Progress</p>
-                <div class="c-progress c-progress--success c-progress--small u-mb-zero">
-                    <div class="c-progress__bar" style="width:65.3%;"></div>
-                </div>
-                <div class="u-text-small u-text-mute u-ml-small">65.3%</div>
-            </div>
-        </div>
-    </div>
-</div><!-- // .row -->
+<!-- // .row -->
 
 
