--- a/SistTestMillon/SistTestMillon/Views/Pacientes/ListaPacientes.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Pacientes/ListaPacientes.cshtml
@@ -70,10 +70,10 @@
                     </td>
                     <td class="c-table__cell u-text-right">
                         <div>
-                            <a class="c-btn c-btn--success" href="#!" onclick="funProd(@item.IdPaciente, 'M', event);">
+                            <a class="c-btn c-btn--success" href="#!" onclick="funPacientes(@item.IdPaciente, 'M', event);">
                                 <i class="fa fa-pencil-square-o u-mr-xsmall"></i>Editar
                             </a>
-                            <a class="c-btn c-btn--danger" href="#!" onclick="funProd(@item.IdPaciente, 'E', event);">
+                            <a class="c-btn c-btn--danger" href="#!" onclick="funPacientes(@item.IdPaciente, 'E', event);">
                                 <i class="fa fa-trash-o u-mr-xsmall"></i>Eliminar
                             </a>
                         </div>
