--- a/SistTestMillon/SistTestMillon/Views/Diagnostico/ListaDiagnosticos.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Diagnostico/ListaDiagnosticos.cshtml
@@ -6,9 +6,7 @@
         <div class="row">
             <div class="col-md-6">
                 Diagnosticos <small>20</small>
-                <button type="button" class="c-btn c-btn--info" data-toggle="modal" data-target="#modal8">
-                    Agregar Diagnostico
-                </button>
+
             </div>
             <div class="col-md-6">
                 <div class="c-field has-addon-right">
@@ -55,10 +53,10 @@
                     </td>
                     <td class="c-table__cell u-text-right">
                         <div>
-                            <a class="c-btn c-btn--success" href="#!" onclick="funProd(@item.IdDiagnostico, 'M', event);">
+                            <a class="c-btn c-btn--success" href="#!" onclick="funDiag(@item.IdDiagnostico, 'M', event);">
                                 <i class="fa fa-pencil-square-o u-mr-xsmall"></i>Editar
                             </a>
-                            <a class="c-btn c-btn--danger" href="#!" onclick="funProd(@item.IdDiagnostico, 'E', event);">
+                            <a class="c-btn c-btn--danger" href="#!" onclick="funDiag(@item.IdDiagnostico, 'E', event);">
                                 <i class="fa fa-trash-o u-mr-xsmall"></i>Eliminar
                             </a>
                             @Html.ActionLink("Diagnostico", "ImprimirDetalle", new { id = item.IdDiagnostico }, new { @class = "c-btn c-btn--info", target = "_blank" })
@@ -106,6 +104,7 @@
                 }
             });
         });
+
     });
 
 
