--- a/SistTestMillon/SistTestMillon/Views/Historias/Index.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Historias/Index.cshtml
@@ -16,7 +16,7 @@
     </div>
 </div>
 <!-- Modal -->
-<div class="c-modal c-modal--medium modal fade ocultarDespues" id="modal8" tabindex="-1" role="dialog" aria-labelledby="modal8" aria-hidden="true">
+<div class="c-modal c-modal--huge modal fade ocultarDespues" id="modal8" tabindex="-1" role="dialog" aria-labelledby="modal8" aria-hidden="true">
     <div class="c-modal__dialog modal-dialog" role="document">
         <div class="c-modal__content">
             <div class="c-modal__header u-bg-primary">
@@ -28,31 +28,34 @@
             <div class="c-modal__body">
                 <form class="c-card__body formAjaxAdd" method="post" action="~/Historias/Add">
                     <div class="row">
-                        <div class="c-field has-addon-right" style="margin-bottom:10px">
-                            <input type="text" class="c-input" name="CodigoDiagnostico" id="CodigoDiagnostico" placeholder="Seleccionar Diagnostico" required="required">
-                            <button type="button" class="c-btn c-btn--info" id="CodDiagnosticos">
-                                <i class="fa fa-search"></i>
-                            </button>
+                            <div class="col-md-6">
+                            <div class="c-field has-addon-right" style="margin-bottom:10px">
+                                <input type="text" class="c-input" name="CodigoDiagnostico" id="Diagnostico" placeholder="Seleccionar Diagnostico" required="required">
+                                <button type="button" class="c-btn c-btn--info" id="CodDiagnosticos">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </div>
+                            </div>
+                            <div class="col-md-6">
+                            <div class="c-field has-addon-left">
+                                <input type="text" class="c-input" name="DniPsicologo" id="DniPsicologo" placeholder="Dni de Psicologo" required="required">
+                            </div>
+                            </div>
+                            <div class="c-field u-mb-xsmall col-6">
+                                <label class="c-field__label" for="textarea2">Motivo</label>
+                                <textarea class="c-input" id="textarea2" name="Motivo" placeholder="Tratamiento" required="required"></textarea>
+                            </div>
+                            <div class="c-field u-mb-xsmall col-6">
+                                <label class="c-field__label" for="textarea3">Tratamiento</label>
+                                <textarea type="text" class="c-input" name="Tratamiento" id="textarea3" placeholder="Tratamiento" required="required"></textarea>
+                            </div>
+                            <div class="c-field u-mb-xsmall col-12">
+                                <label class="c-field__label" for="textarea4">Observacion</label>
+                                <textarea type="text" class="c-input" name="Observacion" id="textarea4" placeholder="Modelo" required="required"></textarea>
+                            </div>
+                            <input type="hidden" name="IdHistoria" id="IdHistoria" />
                         </div>
-                        <div class="c-field u-mb-xsmall">
-                            <label class="c-field__label" for="input-project">Dni Psicologo</label>
-                            <input type="text" class="c-input" name="DniPsicologo" id="DniPsicologo" placeholder="Descripción del Producto" required="required">
-                        </div>
-                        <div class="c-field u-mb-xsmall">
-                            <label class="c-field__label" for="textarea2">Motivo</label>
-                            <textarea class="c-input" id="textarea2"  name="Motivo" placeholder="Tratamiento" required="required"></textarea>
-                        </div>
-                        <div class="c-field u-mb-xsmall">
-                            <label class="c-field__label" for="textarea3">Tratamiento</label>
-                            <textarea type="text" class="c-input" name="Tratamiento" id="textarea3" placeholder="Tratamiento" required="required"></textarea>
-                        </div>
-                        <div class="c-field u-mb-xsmall">
-                            <label class="c-field__label" for="textarea4">Observacion</label>
-                            <textarea type="text" class="c-input" name="Observacion" id="textarea4" placeholder="Modelo" required="required"></textarea>
-                        </div>
-                        <input type="hidden" name="IdHistoria" id="IdHistoria" />
-                    </div>
-                    <div class="c-modal__footer u-justify-center">
+                    <div class="u-text-right">
                         <button class="c-btn c-btn--success btnAjaxAdd" type="submit">
                             Guardar
                             <img src="~/Content/img/load.gif" class="loadingAjaxAdd" style="display:none" />
@@ -66,7 +69,7 @@
 </div><!-- // .c-modal -->
 
 
-<div class="c-modal c-modal--huge modal fade ocultarDespues2" id="modal9" tabindex="-1" role="dialog" aria-labelledby="modal9" aria-hidden="true" data-backdrop="false">
+<div class="c-modal c-modal--huge modal fade ocultarDespues2" id="modal9" tabindex="-1" role="dialog" aria-labelledby="modal9" aria-hidden="true">
     <div class="c-modal__dialog modal-dialog" role="document">
         <div class="c-modal__content">
             <div class="c-modal__header u-bg-primary">
@@ -129,6 +132,11 @@
             $('#divProductos').load(urlGeneral + 'Historias/ListaHistorias' + val + valOrder, function (response, status, xhr) {
                 $("#msgCargando").hide()
             });
+
+            var elemento = document.getElementsByClassName("c-sidebar__link");
+            elemento[0].classList.remove("is-active");
+            elemento[4].className += " is-active";
+
         }
     </script>
     <script src="~/Content/js/custom.js"></script>
