--- a/SistTestMillon/SistTestMillon/Views/Psicologos/ListaPsicologos.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Psicologos/ListaPsicologos.cshtml
@@ -60,10 +60,10 @@
                     </td>
                     <td class="c-table__cell u-text-right">
                         <div>
-                            <a class="c-btn c-btn--success" href="#!" onclick="funProd(@item.IdPsicologo, 'M', event);">
+                            <a class="c-btn c-btn--success" href="#!" onclick="funPsicolog(@item.IdPsicologo, 'M', event);">
                                 <i class="fa fa-pencil-square-o u-mr-xsmall"></i>Editar
                             </a>
-                            <a class="c-btn c-btn--danger" href="#!" onclick="funProd(@item.IdPsicologo, 'E', event);">
+                            <a class="c-btn c-btn--danger" href="#!" onclick="funPsicolog(@item.IdPsicologo, 'E', event);">
                                 <i class="fa fa-trash-o u-mr-xsmall"></i>Eliminar
                             </a>
                         </div>
@@ -87,6 +87,7 @@
 <div class="dataTables_paginate paging_simple_numbers" id="datatable_paginate">
     @Html.PagedListPager(Model, page => Url.Action("ListaPsicologos", new { page, sort = ViewBag.CurrentSort, search = ViewBag.Buscar }))
 </div>
+
 <script>
     var permiteOrdenar = '';
     $(document).ready(function () {
